trunk/Archive2/75/676726c087620c/output
Using built-in specs.
COLLECT_GCC=g++
COLLECT_LTO_WRAPPER=/usr/local/libexec/gcc/x86_64-unknown-linux-gnu/4.9.0/lto-wrapper
Target: x86_64-unknown-linux-gnu
Configured with: ./configure --disable-multilib
Thread model: posix
gcc version 4.9.0 (GCC) 
main.cpp:7:8: error: no matching function for call to 'A::A(<brace-enclosed initializer list>)'
 A a{0,1}; // ???
        ^
main.cpp:7:8: note: candidates are:
main.cpp:1:8: note: constexpr A::A()
 struct A
        ^
main.cpp:1:8: note:   candidate expects 0 arguments, 2 provided
main.cpp:1:8: note: constexpr A::A(const A&)
main.cpp:1:8: note:   candidate expects 1 argument, 2 provided
main.cpp:1:8: note: constexpr A::A(A&&)
main.cpp:1:8: note:   candidate expects 1 argument, 2 provided
